feat: multi-seller marketplace pivot with store-locked cart, sequential invoicing, and seller payouts